colors and positioning for 1 mobject

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     <title>eulerv2</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <script src="http://localhost:8080/pyodide/pyodide.js"></script>
+    <script>
+      window.languagePluginUrl = "http://localhost:8080/pyodide/";
+    </script>
   </head>
   <body>
     <noscript>
