--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <script>
-      window.languagePluginUrl = "https://<%= VUE_APP_DOMAIN %>/pyodide/";
+      window.languagePluginUrl = "<%= VUE_APP_ORIGIN %>/pyodide/";
     </script>
-    <script src="https://<%= VUE_APP_DOMAIN %>/pyodide/pyodide.js"></script>
+    <script src="<%= VUE_APP_ORIGIN %>/pyodide/pyodide.js"></script>
   </head>
   <body>
     <noscript>
