--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,10 @@
     </script>
 
 
+		<!-- PrismJs -->
 		<link href="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/themes/prism.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+		<script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-python.min.js"></script>
   </head>
   <body>
     <noscript>
@@ -51,8 +52,5 @@
 
     <!-- Initialize Firebase -->
     <script src="/__/firebase/init.js"></script>
-
-		<script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js"></script>
   </body>
 </html>
