--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
 		<link href="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/themes/prism.css" rel="stylesheet" />
 		<script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-python.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-bash.min.js"></script>
   </head>
   <body>
     <noscript>
